@@ -36,6 +36,8 @@ Defines no attributes
 
 =head1 Subroutines/Methods
 
+Defines the following functions;
+
 =over 3
 
 =item C<clear_redirect>
@@ -315,7 +317,7 @@ Peter Flanigan, C<< <pjfl@cpan.org> >>
 
 =head1 License and Copyright
 
-Copyright (c) 2017 Peter Flanigan. All rights reserved
+Copyright (c) 2024 Peter Flanigan. All rights reserved
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself. See L<perlartistic>
